welcome.lessons.welcome.methods.picture.MethodsPictureLarge.scala.error
MethodsPictureLarge:2: error: Missing closing brace `}' assumed here
override def run() {
^MethodsPictureLarge:2: error: expected start of definition
override def run() {
         ^MethodsPictureLarge:11: error: expected class or object definition
def marquer()
^MethodsPictureLarge:12: error: expected class or object definition
{
^MethodsPictureLarge:16: error: expected class or object definition
def faireV(c:Color)
^MethodsPictureLarge:17: error: expected class or object definition
{
^MethodsPictureLarge:35: error: expected class or object definition
def motif()
^MethodsPictureLarge:36: error: expected class or object definition
{
^MethodsPictureLarge:44: error: expected class or object definition
def avancer(n:Int)
^MethodsPictureLarge:45: error: expected class or object definition
{
^MethodsPictureLarge:49: error: expected class or object definition
def ligne_motif(n:Int)
^MethodsPictureLarge:50: error: expected class or object definition
{
^